fix body overflow

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,6 +7,7 @@
 
 body {
   background-color: #FFE7E9;
+  overflow: hidden;
 
   a {
     color: #fff;
